# CAOS_RES_Fisura

./: .env.example  .gitignore  .template-source  CHANGELOG.md  README.md  STRUCTURE.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
app/models/: schemas.py
data/: README.md
data-pipeline/: README.md  requirements-gpu.txt  requirements.txt
data-pipeline/fisuralab/: __init__.py  live.py  pipeline.py  registry.py
data/derived/dic/: dic.json
data/examples/: manifest.json
deploy/: pages.md
docs/: README.md  frameworks.md  guides.md
docs/architecture/: 01_overview.md  03_the-gate.md  04_live-lane-pyodide.md  05_precompute-pipeline.md  08_data-contracts.md
docs/cases/: README.md  bcl_examples.md  learned_on_examples.md  severity_grading.md  synthetic_battery.md  width_bench.md
docs/frameworks/: 00_TEMPLATE.md  01_classical-imaging-stack.md  02_learned-segmentation-stack.md  03_anomaly-detection-stack.md
docs/guides/: 00_instantiate.md  01_precompute-pipeline.md  02_bring-your-own-data.md  06_calibration.md
frontend/: .gitignore  copy-data.mjs  index.html  package-lock.json  package.json
frontend/public/: 404.html  CNAME
frontend/src/: fisura.css  main.tsx
scripts/: .template_residue_allow  README.md  check_template_residue.py  fetch-data.ps1  fetch-data.sh  precompute.ps1  precompute.sh
tests/: conftest.py  test_anomaly.py  test_contract.py  test_dic.py  test_image_contract.py  test_learned.py  test_manifest.py  test_monitoring.py  test_multiclass.py  test_pipeline_smoke.py  test_quantification.py  test_stages_and_geometry.py
(+134 files in other folders)
